--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,8 +9,10 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
 # Dialeto do Hibernate para H2
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
 
 # Configuração de segurança OAuth2
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080
@@ -21,20 +23,14 @@ jwt.secret=chave_secreta_para_assinatura_de_tokens_deve_ser_longa_e_segura
 jwt.expiration=3600000
 jwt.refresh-token.expiration=86400000
 
-# Configuração avançada do SpringDoc/Swagger
-springdoc.swagger-ui.path=/swagger-ui.html
-springdoc.api-docs.path=/v3/api-docs
+# Configuração SpringDoc/Swagger
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
-springdoc.swagger-ui.oauth.client-id=api-client
-springdoc.swagger-ui.oauth.use-pkce-with-authorization-code-grant=true
-springdoc.swagger-ui.disable-swagger-default-url=true
-springdoc.packagesToScan=gov.df.seape.sistema.visitas.controller
-springdoc.pathsToMatch=/**
 
 # Configuração adicional para ajudar com problemas de Swagger
-spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
-springdoc.cache.disabled=true
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
+springdoc.swagger-ui.path=/swagger-ui.html
 
 # Habilitar Logs SQL do Hibernate
 logging.level.org.hibernate.SQL=DEBUG
