Mensagem explicando a alteração

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -16,3 +16,22 @@ spring.security.oauth2.client.registration.api-client.client-secret=test-secret
 
 # Configuração especial para testes
 spring.main.allow-bean-definition-overriding=true
+
+# Configuração do SpringDoc/Swagger
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.enabled=true
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.operationsSorter=method
+springdoc.swagger-ui.tagsSorter=alpha
+springdoc.default-produces-media-type=application/json
+springdoc.swagger-ui.csrf.enabled=false
+springdoc.swagger-ui.disable-swagger-default-url=true
+springdoc.swagger-ui.display-request-duration=true
+springdoc.swagger-ui.doc-expansion=none
+
+# Configuração OAuth2 para o Swagger UI
+springdoc.swagger-ui.oauth.clientId=api-client
+springdoc.swagger-ui.oauth.clientSecret=secret
+springdoc.swagger-ui.oauth.token-url=http://localhost:8080/oauth2/token
+springdoc.swagger-ui.oauth.authorization-url=http://localhost:8080/oauth2/authorize
