--- a/pom.xml
+++ b/pom.xml
@@ -99,13 +99,17 @@
             <version>0.2.0</version>
         </dependency>
         
-        <!-- Documentação OpenAPI/Swagger -->
-        <dependency>
+      <!-- Dependências para SpringDoc OpenAPI/Swagger -->
+<dependency>
     <groupId>org.springdoc</groupId>
     <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-    <version>2.0.2</version>
+    <version>2.2.0</version>
 </dependency>
-        
+<dependency>
+    <groupId>org.springdoc</groupId>
+    <artifactId>springdoc-openapi-starter-common</artifactId>
+    <version>2.2.0</version>
+</dependency>
         <!-- DevTools para hot reload (opcional) -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
