Mensagem explicando a alteração

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,13 +24,15 @@ jwt.expiration=3600000
 jwt.refresh-token.expiration=86400000
 
 # Configuração SpringDoc/Swagger
-springdoc.api-docs.enabled=true
-springdoc.swagger-ui.enabled=true
-
-# Configuração adicional para ajudar com problemas de Swagger
-springdoc.api-docs.enabled=true
-springdoc.swagger-ui.enabled=true
+springdoc.api-docs.path=/v3/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.enabled=true
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.operationsSorter=method
+springdoc.swagger-ui.tagsSorter=alpha
+springdoc.default-produces-media-type=application/json
+springdoc.swagger-ui.csrf.enabled=false
+springdoc.swagger-ui.disable-swagger-default-url=true
 
 # Habilitar Logs SQL do Hibernate
 logging.level.org.hibernate.SQL=DEBUG
