--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -41,3 +41,15 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 # Logs adicionais para depuração do SpringDoc e Spring Security
 logging.level.org.springdoc=DEBUG
 logging.level.org.springframework.security=DEBUG
+
+# Níveis de log mais detalhados
+logging.level.root=INFO
+logging.level.gov.df.seape.sistema.visitas=DEBUG
+logging.level.org.springframework.security=DEBUG
+logging.level.org.hibernate.SQL=TRACE
+logging.level.org.hibernate.type.descriptor.sql=TRACE
+
+# Configuração de arquivo de log
+logging.file.name=logs/sistema-visitas.log
+logging.logback.rollingpolicy.max-file-size=10MB
+logging.logback.rollingpolicy.max-history=7
